release-note/1.6.2-beta1/ga_IE.md
## [1.6.2-beta1]

### Security
- Socraíodh go práinneach saincheist slándála ardriosca sa mhodúl bainistíochta cuntas, chun sábháilteacht oibríochtaí riarthóra a fheabhsú tuilleadh
- Socraíodh go práinneach saincheist slándála ardriosca sa tseirbhís comhad, rud a chuir feabhas ar shábháilteacht rochtana agus oibríochtaí comhad

### New
- Cuireadh mód dorcha leis don aip Comhaid
- Cuireadh tacaíocht chomhtháthaithe Alibaba Cloud Drive leis
- Eithne Linux nuashonraithe go 6.18.9
- Cuireadh tacaíocht tiománaí le haghaidh NVIDIA 470 / 580 / Open Kernel Modúl, Intel Xe / Battlemage, Realtek RTW88 / RTL8127, feistí gan sreang Intel / MediaTek / AIC8800, agus feistí fuaime Cirrus Logic, agus chuir sé meicníocht uathbhraite agus oiriúnaithe tiománaí NVIDIA leis a mheaitseálann go huathoibríoch an leagan tiománaí cuí bunaithe ar na crua-earraí

### Fixed
- Éaga seasta eochair OneDrive is cúis le saincheisteanna nasctha, d'athchóirigh sé infhaighteacht bhunúsach chomhtháthaithe, agus leasaíodh an mheicníocht nuashonraithe eochrach
- Réitíodh saincheist inar chuir an aip Freastalaí Collabora bac ar chúltacaí, ag cinntiú gur féidir le tascanna cúltaca rith i gceart
- Socraíodh saincheist ina bhféadfaí an pointe gléasta céanna a shannadh do ilfheistí stórála USB ag am tosaithe
- Réitíodh saincheist inar gineadh iarmhíreanna oidhreachta `-device-name` nuair a tháinig coinbhleacht ar phointí gléasta USB
- Réitíodh fadhb sa chás nár úsáid an stóras a cruthaíodh ó dhiosca deighilte amháin an t-ainm úsáideorasonraithe mar phointe gléasta
- Díghrádú RAID seasta tar éis atosaigh nuair a cruthaíodh eagar RAID ó dhioscaí leis an tsraithuimhir chéanna
- Rudaí dearfacha bréagacha seasta i seiceálacha tosaithe RAID de bharr formáidí neamhréireacha ainm gléis am rite

### Optimized
- Sreafaí oibre oibriúcháin comhad ard-minicíochta optamaithe ar nós allmhairiú, imirce, criptiú, cóipeáil agus gearrtha
- Taispeáint stádais uaslódála tiomántán scamall optamaithe, rud a fhágann go bhfuil sé níos soiléire d'úsáideoirí an dul chun cinn reatha, an stádas críochnaithe agus na cúiseanna teip a thuiscint

### Tips
- Má thagann tú trasna ar aon fhadhbanna bogearraí, ná bíodh drogall ort a bheith páirteach inár bpobal Discord chun nascadh le agus tacaíocht a fháil ó níos mó ná 43,000 ball Zima!
- <a href="https://zimaboard.com/discord" target="_blank" style="color:blue"> https://zimaboard.com/discord</a>
